# manga-translator-lite

./: .gitignore  README-CN.md  README-JP.md  README.md  compress_work.py  editor.html  pyproject.toml  requirements.txt  setup.cfg
examples/: Example.env  config-example.json  config-example.toml
manga_translator_lite/: __init__.py  __main__.py  args.py  config.py
manga_translator_lite/detection/: common_rust.py  paddle_rust.py  panel_finder.py
manga_translator_lite/inpainting/: __init__.py
manga_translator_lite/mask_refinement/: text_mask_utils.py
manga_translator_lite/ocr/: model_32px.py  model_48px.py  model_48px_ctc.py
manga_translator_lite/pipeline/: __init__.py  extract.py  render.py  schema.py  test_merge.py  test_schema.py  translate.py
manga_translator_lite/rendering/: __init__.py  text_render.py
manga_translator_lite/translators/: __init__.py  common.py  keys.py  llm.py  none.py
manga_translator_lite/utils/: __init__.py  dynamic_import.py  generic.py
