[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manga-translator-lite"
version = "0.2.0"
description = "Local OCR + third-party LLM API manga translation pipeline."
authors = []
readme = "README.md"
requires-python = ">=3.10, <3.12"
license = {text = "GPL-3.0-only"}

[project.scripts]
manga-translator = "manga_translator_lite.__main__:main"

[tool.setuptools.packages.find]
include = ["manga_translator_lite*"]

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 100
py_version = 310

[tool.pylint]
disable = """
C,R,W,
c-extension-no-member
"""
additional-builtins = "display"
output-format = "colorized"
generated-members = ["torch.*", "cv2.*"]

[tool.pytest.ini_options]
addopts = "-ra -v -p no:faulthandler"
minversion = "6.0"
testpaths = ["test"]
pythonpath = ["."]

